--- a/#source/style.scss
+++ b/#source/style.scss
@@ -144,7 +144,7 @@
 
 // Хэдер начало /////////////////////
 .headerlog {
-  background: url(/img/bgheader.jpg) center no-repeat;
+  background: url(img/bgheader.jpg) center no-repeat;
   height: 910px;
   width: 1440px;
   position: relative;
@@ -178,7 +178,7 @@ div{
 }
 
 .logo{
-  background: url(/img/logo.png) right no-repeat;
+  background: url(img/logo.png) right no-repeat;
   height: 50px;
   width: 50px;
   position: absolute;
@@ -187,7 +187,7 @@ div{
 }
 
 .logo:hover{
-  background: url(/img/logo_hover.png) right no-repeat;
+  background: url(img/logo_hover.png) right no-repeat;
   height: 50px;
   width: 50px;
   position: absolute;
@@ -517,7 +517,7 @@ div{
   height: 1145px;
   
   .img1{
-    background: url(/img/portfol/portfolio-img1.png) center no-repeat;
+    background: url(img/portfol/portfolio-img1.png) center no-repeat;
     width: 450px;
     height: 560px;
     margin: 250px 0 0 20px;
@@ -525,7 +525,7 @@ div{
     
   }
   .img2{
-    background: url(/img/portfol/portfolio-img.jpg) center no-repeat;
+    background: url(img/portfol/portfolio-img.jpg) center no-repeat;
     width: 450px;
     height: 560px;
     margin: -560px 0 0 490px;
@@ -533,28 +533,28 @@ div{
    
   }
   .img3{
-    background: url(/img/portfol/portfolio-img3.png) center no-repeat;
+    background: url(img/portfol/portfolio-img3.png) center no-repeat;
     width: 450px;
     height: 560px;
     margin: -560px 0 0 960px;
     transition: 0.3s;
   }
   .img4{
-    background: url(/img/portfol/portfolio4.png) center no-repeat;
+    background: url(img/portfol/portfolio4.png) center no-repeat;
     width: 450px;
     height: 560px;
     margin: 10px 0 0 20px;
     transition: 0.3s;
   }
   .img5{
-    background: url(/img/portfol/portfolio5.png) center no-repeat;
+    background: url(img/portfol/portfolio5.png) center no-repeat;
     width: 450px;
     height: 560px;
     margin: -560px 0 0 490px;
     transition: 0.3s;
   }
   .img6{
-    background: url(/img/portfol/portfolio6.png) center no-repeat;
+    background: url(img/portfol/portfolio6.png) center no-repeat;
     width: 450px;
     height: 560px;
     margin: -560px 0 0 960px;
@@ -566,20 +566,20 @@ div{
   background: black;
   position: relative;
   .imageplayer{
-    background: url(/img/video-player.png) center no-repeat;
+    background: url(img/video-player.png) center no-repeat;
     height: 700px;
     width: 1440px;
     margin: 50px 0 0 0;
     
     .playerbut{
       position: absolute;
-      background: url(/img/Play_hover.png) center no-repeat;
+      background: url(img/Play_hover.png) center no-repeat;
       height: 130px;
       width: 130px;
       top: 500px;
       left: 660px;
       &:hover{
-        background: url(/img/Play_hover2.png) center no-repeat;
+        background: url(img/Play_hover2.png) center no-repeat;
         height: 130px;
         width: 130px;
       }
@@ -736,7 +736,7 @@ div{
 .bg3{
   height: 700px;
   width: 1440px;
-  background: url(/img/contacts.jpg) center no-repeat;
+  background: url(img/contacts.jpg) center no-repeat;
   margin: 100px -491px;
   position: relative;
   .contact{
